FB-14497: Fixed menu on small resolutions.

--- a/new-website/css/header-bs3.css
+++ b/new-website/css/header-bs3.css
@@ -42,8 +42,7 @@
 .iz-header .navbar-nav > li > a {
   font-weight: bold;
   color: #333;
-  padding-top: 17px;
-  padding-bottom: 17px;
+  padding: 17px 10px;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
 }
